--- a/TailwindCSS_section/Installation_and_Hello_world/package.json
+++ b/TailwindCSS_section/Installation_and_Hello_world/package.json
@@ -8,8 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.13"
-  }
+  },
+  "description": ""
 }
