CRUD operation with express server

--- a/Backend_section/express_server/package.json
+++ b/Backend_section/express_server/package.json
@@ -2,13 +2,18 @@
   "name": "express_server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": " node index.js"
+    "start": "nodemon index.js",
+    "dev": "npm start"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
