--- a/Backend_section/Mega_Project_of_BACKEND/package.json
+++ b/Backend_section/Mega_Project_of_BACKEND/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
     "morgan": "^1.10.0",
     "winston": "^3.17.0"
   },
