--- a/Backend_section/Mega_Project_of_BACKEND/package.json
+++ b/Backend_section/Mega_Project_of_BACKEND/package.json
@@ -12,12 +12,18 @@
   "author": "M.A.Hasnain",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
