--- a/Frontend_section/09_Mega-Project_Blog-App/package.json
+++ b/Frontend_section/09_Mega-Project_Blog-App/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^16.1.0",
     "html-react-parser": "^5.2.2",
